<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.AboutActivity">

    <RelativeLayout
        android:id="@+id/relativeLayoutToolbar"
        android:layout_width="wrap_content"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@color/app_bg_color"
        android:gravity="center_vertical"
        tools:ignore="UselessParent">

        <ImageButton
            android:id="@+id/backImageIconBtn"
            android:layout_width="48dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:background="@color/app_bg_color"
            android:paddingStart="5dp"
            android:paddingTop="2dp"
            android:paddingEnd="5dp"
            android:paddingBottom="2dp"
            android:src="@drawable/ic_arrow_back"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_toRightOf="@id/backImageIconBtn"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="About"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/relativeLayoutToolbar"
        android:orientation="vertical"
        android:background="@color/app_bg">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_menu_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/roboto_bold"
            android:text="Time Date Converter"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:lineSpacingExtra="2dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/app_about_txt_1"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/app_about_txt_2"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="40dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/app_about_txt_3"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="40dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/app_about_txt_4"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="40dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/app_about_txt_5"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="40dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/app_about_txt_6"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="40dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/app_about_txt_7"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="40dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/app_about_txt_8"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="40dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/app_about_txt_9"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/roboto_bold"
            android:text="Version"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/versionName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@color/black"
            android:textSize="13sp" />

    </LinearLayout>

</RelativeLayout>